tests/miz/fail/types/fail_type_elaboration_imported_structure_gap_001.miz
import parser.type_fixtures;
reserve r for R;
